--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,7 @@
   height: 150px !important;
   border-radius: 10px !important;
 }
+.ant-select-selection-item {
+  display: flex;
+  align-items: center;
+}
