--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,39 @@
   display: flex;
   align-items: center;
 }
+
+.input-wrapper {
+  border-radius: 10px;
+  height: 50px;
+  border: 1px solid #d9d9d9;
+  display: flex;
+  align-items: center;
+  padding: 0px 15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.upload-btn-wrapper {
+  overflow: hidden;
+  display: inline-block;
+  margin-left: auto;
+}
+
+.btn {
+  border: none;
+  color: white;
+  background-color: #bfbfbf;
+  width: 90px;
+  height: 30px;
+  border-radius: 8px;
+  font-size: 12px;
+}
+
+.upload-btn-wrapper input[type="file"] {
+  width: 100%;
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
