--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -142,6 +142,7 @@ body {
 .footer {
     width: 100%;
     height: 477px;
+    background-color: white;
 
     .footer-info {
         padding: 80px 100px;
@@ -441,6 +442,17 @@ body {
     }
 }
 
+.yellow-card{
+    background: #FACC15;
+     border-radius: 5px;
+      font-weight: 600;
+       padding: 10px 15px;
+        margin-top: 12px;
+         display: flex;
+          justify-content: space-between;
+           align-items: center
+}
+
 .item-card-action-list {
     position: relative;
     display: flex;
@@ -460,6 +472,69 @@ body {
         color: #7B7C7F;
         z-index: 10;
     }
+}
+
+.yellow-action-list{
+    .item-card-time {
+    background: transparent !important;
+    color: black !important;
+    }
+}
+
+.list-details > div{
+    margin: 7px 0px;
+}
+
+.vh-center{
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
+.tab{
+    width: 90%;
+    position: absolute;
+    display: flex;
+    height: 50px;
+      left: 50%;           
+      transform: translate(-50%, 0);
+       border-radius: 18px;
+        border: 1px solid #ececec;
+         background: white;
+          margin-top: -95px
+}
+.tab>.active{
+    background-color: #E59F17;
+    color: white;
+}
+
+.tab-item{
+    display: flex;
+    align-items: center;
+    padding:10px 50px;
+    
+    border-radius: 18px;
+   
+    font-weight: bold;
+cursor: pointer;
+}
+
+.see-more{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4F83D8;
+    font-weight: bold;
+    height: 150px;
+    border-radius: 18px;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    font-size: 16px;
+    box-shadow: 100px -40px 100px rgb(240, 240, 240);
 }
 
 
