--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -537,11 +537,14 @@ cursor: pointer;
     box-shadow: 100px -40px 100px rgb(240, 240, 240);
 }
 
+.ant-card-body{
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+}
 
 .item-card-hover-action {
     position: absolute;
     top: 100px;
-    padding: 0px 15px;
     width: 100%;
     color: white;
     text-align: center;
